<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/tv_action_safe_margin">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_profile"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintWidth_max="800dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <!-- Profile Name Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_body" />

            <EditText
                android:id="@+id/profileNameEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/input_background"
                android:hint="@string/profile_name_hint"
                android:inputType="text"
                android:padding="@dimen/margin_medium"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_tertiary"
                android:textSize="@dimen/text_size_body" />

            <!-- IP Address Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/server_ip"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_body" />

            <EditText
                android:id="@+id/ipEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/input_background"
                android:digits="0123456789."
                android:hint="@string/hint_ip"
                android:inputType="number"
                android:padding="@dimen/margin_medium"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_tertiary"
                android:textSize="@dimen/text_size_body" />

            <!-- Port Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/server_port"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_body" />

            <EditText
                android:id="@+id/portEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/input_background"
                android:hint="@string/hint_port"
                android:inputType="number"
                android:maxLength="5"
                android:padding="@dimen/margin_medium"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_tertiary"
                android:textSize="@dimen/text_size_body" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@drawable/primary_button_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/button_padding_horizontal"
                    android:text="@string/save_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_button"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/secondary_button_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/button_padding_horizontal"
                    android:text="@string/cancel"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_size_button"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>